tests/positive/Test21.sp
(* Testing comments * )
(* Coments work just fine *)
main:Void() {
	while false || b() > 2 || false {
		a:Int = 2;
	}
	return ;
}

b:Int() {
	return 2;
}