tests/negative/Test20.sp
(* Calling function with invalid variable *)
pi:Int = 2;
main(pi3);
main:Void(a:Int) {
	return ;
}
(* pi3:Int = pi*5; *)